Opened 13 years ago
Closed 13 years ago
#8040 closed bug (fixed)
Radeon HD IGP (integrated) chipsets cause app_server crash / gdb
Reported by: | kallisti5 | Owned by: | kallisti5 |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | Drivers/Graphics/radeon_hd | Version: | R1/Development |
Keywords: | IGP | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
There is a special way to find the AtomBIOS on IGP chipsets that needs to be completed.
If we can't find an AtomBIOS image, we bail out and cause app_server to crash.
Attachments (1)
Change History (8)
comment:1 by , 13 years ago
comment:2 by , 13 years ago
More information on this from DRM driver:
/* If you boot an IGP board with a discrete card as the primary, * the IGP rom is not accessible via the rom bar as the IGP rom is * part of the system bios. On boot, the system bios puts a * copy of the igp rom at the start of vram if a discrete card is * present. */
comment:3 by , 13 years ago
Initial attempts at IGP support added in hrev42901
This is *untested*, if you have IGP, please give it a whirl and make sure there is no gdb / kdl prompts. Feel free to report results in this case (with syslog output if possible)
Thanks!
comment:4 by , 13 years ago
User tests showed that memory_base was set to 0 and not what I was looking for.
updated code to use BAR 0 (FB BASE) was added hrev42903, please test!
comment:5 by , 13 years ago
I did just about a rewrite of the AtomBIOS seeking code in hrev42906
We now check several places and should have much better coverage of edge cases including IGP.
Please give it a whirl and post the logs here.
comment:6 by , 13 years ago
Hi, I was the reporter of #8046 so same hardware obviously. Now it gets past the last icon but then the screen just goes white with hrev42910. I'm not sure how to get the logs exactly so I just took another photo... sorry! Hopefully it's of some help, if not and you can give me a pointer on how to retrieve the logs I'm happy to do that. Cheers.
by , 13 years ago
Attachment: | DSC_0009.jpg added |
---|
comment:7 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Yup. Thanks for the screenshot.
We are now finding the AtomBIOS on IGP chipsets. The white /black / blue /red screen issue is the same issue everyone else is having on Radeon HD 4xxx+
As we are finding the AtomBIOS now.. i'm going to mark this one resolved.
Feel free to follow #8011, it's about Radeon 4xxx+ not functioning with blank screens.
#8046 closed as duplicate