* simplify some trace statements * add potential support for IGP chipsets * igp code is *untested* and should work *in theory* * potentially resolves #8040 / #8046 ?

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42901 a95241bf-73f2-0310-859d-f6bbb57e9c96